[package]
name = "signed-json"
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde_json = { version = "1.0.68", features = ["raw_value"] }
base64 = {version = "0.13.0", optional = true}
serde-transcode = "1.1.1"
ed25519-dalek = {version = "2.0.0", optional = true}
anyhow = "1.0.52"

[features]
default = ["signed"]
signed = ["base64", "ed25519-dalek"]
